--- a/src/components/App.css
+++ b/src/components/App.css
@@ -24,3 +24,16 @@
 .card-content {
   height: 100px;
 }
+.card-image {
+  height: 230px;
+}
+.link,
+#myNav {
+  color: teal;
+  font-size: 16px;
+}
+.activeRoute {
+  background-color: rgb(236, 236, 40);
+  border-bottom: 2px solid teal;
+  cursor: not-allowed;
+}
