--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,26 +1,17 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
 .App-header {
+  align-items: center;
   background-color: #282c34;
-  min-height: 25vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #09d3ac;
+.App-title {
+  color: #fff;
 }
-
+.logo {
+  padding: 20px;
+}
 .card-content {
   height: 100px;
 }
@@ -29,12 +20,15 @@
 }
 .link,
 #myNav {
-  color: teal;
-  font-size: 16px;
+  color: #28c8a3;
+  font-size: 20px;
   padding: 10px;
 }
 .activeRoute {
-  background-color: rgb(236, 128, 40);
+  background-color: #fab010;
   color: #fff;
   padding: 10px;
+}
+.headlines {
+  color: #282c34;
 }
